[project]
name = "comfyui-modelscope"
description = "A ComfyUI custom node package for ModelScope API integration, providing seamless access to ModelScope's powerful AI models including Large Language Models (LLM), Vision-Language Models (VLM), and Image Generation capabilities."
version = "1.0.0"
license = {file = "LICENSE"} 
# classifiers = [
#     # For OS-independent nodes (works on all operating systems)
#     "Operating System :: OS Independent",
#
#     # OR for OS-specific nodes, specify the supported systems:
#     "Operating System :: Microsoft :: Windows",  # Windows specific
#     "Operating System :: POSIX :: Linux",  # Linux specific
#     "Operating System :: MacOS",  # macOS specific
#
#     # GPU Accelerator support. Pick the ones that are supported by your extension.
#     "Environment :: GPU :: NVIDIA CUDA",    # NVIDIA CUDA support
#     "Environment :: GPU :: AMD ROCm",       # AMD ROCm support
#     "Environment :: GPU :: Intel Arc",      # Intel Arc support
#     "Environment :: NPU :: Huawei Ascend",  # Huawei Ascend support
#     "Environment :: GPU :: Apple Metal",    # Apple Metal support
# ]

dependencies = []

[project.urls]
Repository = "https://github.com/neverbiasu/ComfyUI-ModelScope"
#  Used by Comfy Registry https://registry.comfy.org
Documentation = "https://github.com/neverbiasu/ComfyUI-ModelScope/wiki"
"Bug Tracker" = "https://github.com/neverbiasu/ComfyUI-ModelScope/issues"

[tool.comfy]
PublisherId = "faych"
DisplayName = "ComfyUI-ModelScope"
Icon = "https://raw.githubusercontent.com/neverbiasu/ComfyUI-ModelScope/master/assets/logo.png"
includes = [] 
# "requires-comfyui" = ">=1.0.0"  # ComfyUI version compatibility

